--- a/public/css/app.css
+++ b/public/css/app.css
@@ -158,6 +158,7 @@ header h1 {
     border-radius: 50%;
     width: 40px; /* ボタンの幅を調整 */
     height: 40px; /* ボタンの高さを調整 */
+    color: black;
 }
 
 .color-icon {
