--- a/public/css/color_modal.css
+++ b/public/css/color_modal.css
@@ -12,12 +12,39 @@
 
 .color-modal {
     display: flex;
+    align-items: center;
     border-radius: 50px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-.color-add-icon {
-    background-color: #a9a9a9;
+.color-picker-wrapper {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: none;
+    padding: 0;
+    background: none;
+    position: relative;
+    overflow: hidden;
+    background-color: darkgray;
+}
+
+.color-picker {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.color-picker-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 18px;
     color: black;
 }
 
