カラー編集モーダルの中身修正

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -166,7 +166,8 @@ header h1 {
     height: 40px;
     border-radius: 50%;
     border: none;
-    margin: 5px; /* アイコン間の余白を調整 */
+    margin: 5px;
+    position: relative;
 }
 
 
